# filemaker-mcp-server

./: .env.example  .gitignore  FIELD_REFERENCE.md  README.md  SETUP_GUIDE.md  filemaker_mcp_server.py  filemaker_reports.py  pyproject.toml  requirements.txt  run_daily_report.bat  run_reports.py  test_connection.bat  test_connection.py
